<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/error"
    android:background="@color/cardview_dark_background"
    android:visibility="gone">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:src="@drawable/error"
        android:contentDescription="@string/error_message" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/error_communication"/>

    <TextView
        android:id="@+id/tvMsgErro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/error"/>

</LinearLayout>